com.top_logic.themes.core/src/main/webapp/style/form.css
/*
****					****
****	Form styles		****
****					****
*/
.frmBody h1 {
	font-family: var(--font-family);
	font-weight: bold;
	font-size: var(--heading-04-font-size);
	line-height: var(--heading-04-line-height);
	letter-spacing: var(--heading-04-letter-spacing);
}

.rf_header,
.dfEntryTitle {
	font-family: var(--font-family);
	font-weight: bold;
    font-size: var(--heading-compact-02-font-size);
    line-height: var(--heading-compact-02-line-height);
    letter-spacing: var(--heading-compact-02-letter-spacing);
}

.dfEntryTitle {
	display: flex;
}

.dfItemTitle {
    text-overflow: ellipsis;
    white-space: initial;
    overflow: hidden;
}

.rf_header > .rf_menu, 
.dfModeFull .dfListCommands,
.dfEntryTitle .lFixedRight {
	display: flex;
	gap: var(--spacing-01);
}

.dfContent {
	overflow: hidden;
	align-self: center;
}

.dfItemTitle {
	display: flex;
	flex-grow: 2;
}

.mboxContent .dfContent .dfToolbar {
	display: flex;
	gap: var(--spacing-01);
}

.fieldSetBoxContainer {
	display: inline-flex;
	align-items: center;
	gap: var(--spacing-02);
}

.collapsed .dfToolbar {
	display: none;
}

.dfListCommands .cOnExpandedControl {
	padding: 0;
}

div.fptPage {
    position: absolute;
    top: 0px;
    left: 0px;
    bottom: 0px;
    right: 0px;
    
    display: flex;
    flex-direction: column;
}

div.fptBody {
	margin-top: var(--spacing-02);
}

div.fptBodyContent {
	padding: 0 var(--spacing-03);
}

div.fptTitle {
	margin-top: var(--spacing-03);
    background-color: transparent;
}

div.fptTitleContent, 
div.fptSubtitleContent {
    white-space: nowrap;
    color: var(--text-primary);
}

.fptTitleContent > *,
.fptSubtitleContent > *,
.fptTitleText {
	overflow: hidden;
	text-overflow: ellipsis;
}

.fptTitleText {
	width: 100%;
}

.fptHeader span.can-edit {
	width: initial;
}

div.fptTitleContent {
	display: flex;
	align-items: center;
	padding-left: var(--spacing-03);
	padding-right: var(--spacing-06);
}

div.fptTitleContent .tlTranslatedI18nField, 
div.fptTitleContent .cTextInput {
	width: calc(100% - var(--heading-04-font-size) - 6px);
}

div.fptTitleContent, 
div.fptTitleContent .cTextInput,
div.fptTitle input.is-input, 
div.fptTitle select.is-input {
	font-family: var(--font-family);
	font-weight: var(--highlight-weight, bold);
	font-size: var(--heading-04-font-size);
	line-height: var(--heading-04-line-height);
	letter-spacing: var(--heading-04-letter-spacing);
}

div.fptSubtitle {
    overflow: hidden;
	margin-top: var(--spacing-03);
}

div.fptSubtitleContent {
	display: flex;
    align-items: center;
    width: 100%;
    box-sizing: border-box;
    padding: 0 var(--spacing-03);
    font-size: var(--heading-03-font-size);
    font-weight: bold;
}

div.fptIconBar > span,
.fptIcon, 
.fptIconWithOverlay {
    position: absolute;
    top: 12px;
    right: 20px;
}

div.fptIconBar > span.fptIcon, 
div.fptIconBar > span.fptIconWithOverlay,
div.fptIconBar > span {
    font-size: 32px;
}

div.fptIconBar > span.fptIconOverlay {
    font-size: 16px !important;
}

.fptIconOverlay {
    position: absolute;
	top: 4px !important;
    right: 5px !important;
    border-radius: 30px;
    color: var(--button-fg, var(--icon-primary));
    background: var(--layer);
    padding: 4px;
}

.rf_header .cLabel {
	display: flex;
}

.rf_label label {
	font-weight: bold;
	white-space: nowrap;
}

.rf_label {
	white-space: nowrap;
	margin: var(--spacing-02) 0;
}

.mandatory.can-edit label:after {
    content: "*";
}

.is-tooltip {
	display: none;
}

.config {
    display: none;
}

.mulitLines .rf_label span.can-edit {
	/* labels are rendered over more than one line if needed */
	white-space: pre-line;
}

span.can-edit {
	width: inherit;
    overflow: hidden;
    white-space: nowrap;
    text-overflow: ellipsis;
}

/*
 * Functional styles. No configuration!
 */

.invisible {
	display: none;
}

.can-edit .is-display {
	display: none;
}

.cannot-edit .is-input {
	display: none;
}

.cannot-edit .is-input,
.cannot-edit .is-upload {
	display: none;
}

.disabled .is-action {
	display: none;
}

.cannot-edit .is-action {
	display: none;
}

/*.is-onerror*/.no-error .is-error {
	display: none;
}

.dragImage ul {
	list-style-type: none;	
}

.collapsed .frmGroupExpand::before {
	content: none;
}

.frmGroupExpand {
	display: inline-flex;
}

.rf_header > .rf_keepInline {
	display: flex;
	flex-grow: 2;
}

.rf_keepInline + .frmGroupExpand,
.frmGroupExpand:first-child,
.rf_header >:nth-child(2),
.dfEntryTitle >:nth-child(2) {
	margin-left: auto;
}

.dfEntryTitle > .lFlexible {
	flex-grow: 2;
}
	
.frmGroupExpand::before {
	display: inline-flex;
	vertical-align: middle;
	border-left: 1px solid var(--border-subtle);
	margin-right: var(--spacing-02);
	height: calc(var(--COLLAPSIBLE_IMAGE_HEIGHT) - var(--spacing-02) * 2);
	content: " ";
}

.dfListCollapseIcon {
	display: inline-flex;
}

.dfListCollapseIcon::before {
	display: inline-flex;
	vertical-align: middle;
	border-left: 1px solid var(--border-subtle);
	margin-right: var(--spacing-02);
	height: calc(var(--COLLAPSIBLE_IMAGE_HEIGHT) - var(--spacing-02) * 2);
	content: " ";
}

.frmGroupExpand a {
	color: var(--button-fg, var(--icon-primary));
}

.frmGroupExpand a:hover {
	text-decoration: none;
}

.frmBody {
	margin: var(--spacing-02) var(--spacing-03) 0 var(--spacing-03);
}

div.frmBody > div.dropPane {
	display: none;
}

/* HRTag (fhr - form header) */
div.fhrContainer {
	margin-top: var(--spacing-03);
	margin-bottom: var(--spacing-02);
	height: 2.5rem;
}

table.fhrTable {
	border-collapse: collapse;
	margin-left: -5px;
	margin-right: -5px;
}

td.fhrLeft {
	height: 2.5rem;
	padding-right: var(--spacing-02);
	background-color: var(--layer-accent);
	color: var(--layer-accent-text);
	--button-fg: var(--layer-accent-icon);
}

td.fhrMiddle {
	vertical-align: middle;
	height: 2.5rem;
	width: 100%;
	background-color: var(--layer-accent);
	color: var(--layer-accent-text);
	--button-fg: var(--layer-accent-icon);
}
/* ... */

